--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,16 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Salut mec!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block hash1 %}<h1>Titre par défaut</h1>{% endblock %}
+        {% block body %}
+        <div id="content">
+            <p>du contenu par défaut</p>
+        </div>
+        {% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
 </html>
